--- a/style.css
+++ b/style.css
@@ -149,3 +149,17 @@ h1 {
 .project-link:hover {
     background-color: var(--accent-hover);
 }
+footer {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.footer-link {
+    color: var(--accent-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.footer-link:hover {
+    color: var(--accent-hover);
+}
