--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 20px;
@@ -24,9 +24,21 @@ h1, h2 {
     color: var(--primary-text);
 }
 
+p {
+    line-height: 1.8;
+    margin-bottom: 1em;
+}
+
 h1 {
     border-bottom: 2px solid var(--primary-text);
+    font-size: 2em;
+    margin: 1em 0 0.5em;
     padding-bottom: 10px;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin: 0.75em 0 0.5em;
 }
 
 .project-overview {
