--- a/style.css
+++ b/style.css
@@ -173,3 +173,16 @@ h1 {
         align-items: center;
     }
 }
+
+.site-footer {
+    text-align: center;
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+}
+
+.site-footer a {
+    color: #fff;
+    text-decoration: underline;
+}
