--- a/style.css
+++ b/style.css
@@ -273,3 +273,33 @@ footer {
 .contact-info a:hover {
     color: var(--accent-hover);
 }
+
+/* Navigation toggle styles */
+.menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.navbar-links {
+    display: flex;
+}
+
+@media (max-width: 600px) {
+    .menu-toggle {
+        display: block;
+    }
+
+    .navbar-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar.open .navbar-links {
+        display: flex;
+    }
+}
