--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
 
 :root {
     --bg-color: #f4f4f4;
@@ -11,7 +12,7 @@
 
 body {
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.7;
     margin: 0;
     padding: 20px;
     max-width: 1200px;
@@ -22,23 +23,24 @@ body {
 
 h1, h2 {
     color: var(--primary-text);
+    font-family: 'Roboto Slab', serif;
 }
 
 p {
-    line-height: 1.8;
-    margin-bottom: 1em;
+    line-height: 1.7;
+    margin: 0 0 1.2em;
 }
 
 h1 {
     border-bottom: 2px solid var(--primary-text);
-    font-size: 2em;
-    margin: 1em 0 0.5em;
+    font-size: 2.3em;
+    margin: 1.2em 0 0.6em;
     padding-bottom: 10px;
 }
 
 h2 {
-    font-size: 1.5em;
-    margin: 0.75em 0 0.5em;
+    font-size: 1.7em;
+    margin: 1em 0 0.5em;
 }
 
 .project-overview {
@@ -243,7 +245,6 @@ footer {
 .footer-link:hover {
     color: var(--accent-hover);
 }
-
 .back-to-top {
     display: inline-block;
     margin: 20px 0;
